tests/paczka1/small_fuzzy/81660739.err
Error in line 11: uqE S431 93,9
Error in line 7: LPKT S431 29,1
